// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNoTestsFoundMessage returns correct message when monitoring only changed 1`] = `"No tests found related to files changed since last commit."`;

exports[`getNoTestsFoundMessage returns correct message when monitoring only failures 1`] = `
"No failed test found.
Press \`f\` to quit \\"only failed tests\\" mode."
`;

exports[`getNoTestsFoundMessage returns correct message with passWithNoTests 1`] = `"No tests found, exiting with code 0"`;

exports[`getNoTestsFoundMessage returns correct message with verbose option 1`] = `
"No tests found, exiting with code 1
Run with \`--passWithNoTests\` to exit with code 0

Pattern: /path/pattern - 0 matches"
`;

exports[`getNoTestsFoundMessage returns correct message without options 1`] = `
"No tests found, exiting with code 1
Run with \`--passWithNoTests\` to exit with code 0
In /root/dir
  0 files checked across 0 projects. Run with \`--verbose\` for more details.
Pattern: /path/pattern - 0 matches"
`;
